--- a/slides.html
+++ b/slides.html
@@ -161,12 +161,20 @@
 					Javascript => ... => Running Application</h3>
 				</section>
 				
-				<section>
+				<section data-transition="none">
 					<h3>I know what you're thinking...</h3>
 					<h3 class="fragment">I miss regular JavaScript</h3>
-					<h3 class="fragment">Write it, interpreter runs it<sup>*</sup></h3>
-					<h3 class="fragment">No compiler needed<sup>*</sup></h3>
-					<p class="fragment"><sup>*</sup>These are lies</p>
+					<h3 class="fragment">Write it, interpreter runs it<sup style="visibility: hidden">*</sup></h3>
+					<h3 class="fragment">No compiler involved<sup style="visibility: hidden">*</sup></h3>
+					<p style="visibility: hidden"><sup>*</sup>These are lies</p>
+				</section>
+
+				<section data-transition="none">
+					<h3>I know what you're thinking...</h3>
+					<h3>I miss regular JavaScript</h3>
+					<h3>Write it, interpreter runs it<sup>*</sup></h3>
+					<h3>No compiler involved<sup>*</sup></h3>
+					<p><sup>*</sup>These are lies</p>
 				</section>
 				
 				<section>
