--- a/slides.html
+++ b/slides.html
@@ -358,8 +358,8 @@ class C {
 
 				<section>
 					<h2>Option 2: Leverage a Library</h2>
-					Angular Seed -> serve.prod.exp
-					Angular CLI -> ng serve -prod --aot
+					<h3>Angular Seed -> serve.prod.exp</h3>
+					<h3>Angular CLI -> ng serve -prod --aot</h3>
 				</section>
 
 				<section>
